スタイリング

--- a/index.html
+++ b/index.html
@@ -7,6 +7,51 @@
     <title>My ToDo List</title>
   </head>
   <body>
+    <div class="container">
+      <h1>
+        Todos
+        <button>Purge</button>
+      </h1>
+      <ul>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>
+              aaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+              aaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+              aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+            </span>
+          </label>
+          <button>×</button>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>
+              aaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+              aaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+              aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+            </span>
+          </label>
+          <button>×</button>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" />
+            <span>
+              aaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+              aaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+              aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+            </span>
+          </label>
+          <button>×</button>
+        </li>
+      </ul>
+      <form>
+        <input type="text" />
+        <button>add</button>
+      </form>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
