JSONでデータ保存

--- a/index.html
+++ b/index.html
@@ -12,42 +12,8 @@
         Todos
         <button>Purge</button>
       </h1>
-      <ul>
-        <li>
-          <label>
-            <input type="checkbox" />
-            <span>
-              aaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-              aaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-              aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-            </span>
-          </label>
-          <button>×</button>
-        </li>
-        <li>
-          <label>
-            <input type="checkbox" />
-            <span>
-              aaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-              aaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-              aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-            </span>
-          </label>
-          <button>×</button>
-        </li>
-        <li>
-          <label>
-            <input type="checkbox" />
-            <span>
-              aaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-              aaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-              aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-            </span>
-          </label>
-          <button>×</button>
-        </li>
-      </ul>
-      <form>
+      <ul id="todos"></ul>
+      <form id="add-form">
         <input type="text" />
         <button>add</button>
       </form>
